--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
 name = "jquants-derivatives"
-version = "0.1.0-alpha1"
-description = ""
+version = "0.1.0-alpha2"
+description = "J-Quants API Client Derivatives Library"
+readme = "README.md"
 authors = ["driller"]
 readme = "README.md"
 packages = [{include = "jquants_derivatives"}]
+homepage = "https://github.com/drillan/jquants-derivatives"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +16,8 @@ plotly = "^5.14.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.23.1"
+tabulate = "^0.9.0"
+ipython-sql = "^0.5.0"
 
 
 [tool.poetry.group.test.dependencies]
